// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HistoryTag :  renders a snapshot of <HistoryTag /> when status = Pending 1`] = `
<span
  className="tag orange"
>
  Pending
</span>
`;

exports[`HistoryTag :  renders a snapshot of <HistoryTag /> when status = Successful 1`] = `
<span
  className="tag green"
>
  Successful
</span>
`;

exports[`HistoryTag :  renders a snapshot of <HistoryTag /> when status = Successful 2`] = `
<span
  className="tag red"
>
  Failed
</span>
`;
